# dungeon_master_ai

./: .gitignore  CLAUDE.md  ai_dungeon_master_spec.docx  centerstage  docker-compose.yml  image_generator.ipynb  obs_scripts.swift  railway.toml  voice_generator.ipynb
.qwen/commands/: speckit.plan.md  speckit.specify.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  test_logging.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_characters.py  003_scenarios.py  004_rooms.py  005_sessions.py
backend/src/: __init__.py
backend/src/api/: dependencies.py  main.py  middleware.py
backend/src/api/routes/: __init__.py  auth.py  characters.py  rooms.py  scenarios.py  sessions.py  tts.py  users.py  voice.py  websocket.py
backend/src/core/: config.py  database.py  logging.py  redis.py  security.py  storage.py
backend/src/models/: __init__.py  character.py  message.py  room.py  scenario.py  session.py  user.py
backend/src/schemas/: __init__.py  auth.py  character.py  common.py  moderation.py  room.py  scenario.py  session.py  tts.py  user.py  voice.py  websocket.py
backend/src/services/: ai_service.py  ai_service_openrouter.py  auth_service.py  character_service.py  dice_parser.py  dnd_validator.py  lobby_service.py  moderation_service.py  scenario_service.py  session_service.py  state_extractor.py  tts_service.py  user_service.py  voice_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contract.py  test_characters_contract.py  test_metrics_contract.py  test_rooms_contract.py  test_scenarios_contract.py  test_users_contract.py  test_voice_contract.py
backend/tests/integration/: test_ai_orchestration.py  test_scenario_generation.py  test_websocket_session.py
backend/tests/load/: conftest.py  test_websocket_load.py
backend/tests/unit/: test_dice_parser.py  test_dnd_validation.py  test_state_extractor.py  test_tts_service.py  test_voice_service.py
ios/: .env.example  .gitignore  Dockerfile  README.md  analysis_options.yaml  build.yaml  firebase.json  pubspec.yaml
ios/.qwen/commands/: speckit.tasks.md
ios/android/: local.properties
ios/ios/: Podfile
ios/ios/Runner/: GoogleService-Info.plist  Info.plist
ios/ios/Runner.xcodeproj/: project.pbxproj
ios/lib/: app.dart  firebase_options.dart  main.dart
ios/macos/Flutter/: GeneratedPluginRegistrant.swift
ios/macos/Runner/: Info.plist
ios/macos/Runner.xcodeproj/: project.pbxproj
ios/test/: widget_test.dart
ios/web/: index.html  manifest.json
specs/001-ios-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ux-screens.md
specs/002-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agora-voice-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-elevenlabs-tts-streaming/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+129 files in other folders)
